--- a/responsive-design-natgeo/index.html
+++ b/responsive-design-natgeo/index.html
@@ -20,33 +20,36 @@
           </nav>
           <div></div>
         </header>
-        <h1>PHOTOGRAPHY</h1>
-        <div class="subtitulo">
-          <h2>TRAVEL PHOTOGRAPHY</h2>
-          <h3><a href="#">SEE MORE</a></h3>
-        </div>
-        <div class="item">
-          <img src="images/img-compact-cameras.png">
-          <div class="texto">
-            <h4>Top 10 Compact Cameras for Travelers</h4>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+        <div class="small-contenedor">
+          <h1>PHOTOGRAPHY</h1>
+          <div class="subtitulo">
+            <h2>TRAVEL PHOTOGRAPHY</h2>
+            <h3><a href="#">SEE MORE</a></h3>
           </div>
-        </div>
-        <div class="item">
-          <img src="images/img-supermoon.png">
-          <div class="texto">
-            <h4>How to Photograph a Supermoon</h4>
-            <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.</p>
+          <div class="item">
+            <img src="images/img-compact-cameras.png">
+            <div class="texto">
+              <h4>Top 10 Compact Cameras for Travelers</h4>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            </div>
           </div>
+          <div class="item">
+            <img src="images/img-supermoon.png">
+            <div class="texto">
+              <h4>How to Photograph a Supermoon</h4>
+              <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.</p>
+            </div>
+          </div>
+          <div class="cuadro-amarillo">
+            <p>SHOW MORE</p>
+          </div>
+          <div class="subtitulo">
+            <h2>PHOTOS OF THE YEAR</h2>
+            <h3><a href="#">SEE MORE</a></h3>
+          </div>
+          <img class="img-chango" src="images/img-tree-monkey.png" alt="">
         </div>
-        <div class="cuadro-amarillo">
-          <p>SHOW MORE</p>
-        </div>
-        <div class="subtitulo">
-          <h2>PHOTOS OF THE YEAR</h2>
-          <h3><a href="#">SEE MORE</a></h3>
-        </div>
-        <img class="img-chango" src="images/img-tree-monkey.png" alt="">
+
         <footer>
           <div class="part-uno">
             <div class="seccion-iconos seccion">
